cleans up displayed movies dropdown
places result data in a card (still needs to truncate description after a certain length in description)

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -55,11 +55,12 @@
       <h1 class="my-4">What are We Watching Tonight</h1>
       <p>Click on the genre below to get recommendations for the best movies.</p>
 
+	<div class="row" id="displayed-movies">
+	</div>
+
+	  
       <!-- Team Members Row -->
       <div class="row">
-        <div class="col-lg-12" id="drop">
-          <!-- Shit Drops Here -->
-        </div>
         <div class="col-lg-12">
           <h2 class="my-4">Get Started Below</h2>
         </div>
